Bug squashing

--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+html, body {
+    height:100%;
+}
+
 body {
     background-color: #4286f4;
 }
